pic tweaking, white space below footer bug fixed

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -47,7 +47,7 @@
     @media (min-width: 767px) and (max-width: 899px) {
         border-radius: 14em;
         width: 73%;
-        height: 40%;
+        height: 65%;
         margin-top: 3em;
         margin-left: 2em;
     }
@@ -55,7 +55,7 @@
     @media (min-width: 900px) and (max-width: 999px){
         border-radius: 14em;
         width: 80%;
-        height: 43%;
+        height: 81%;
         margin-top: 3em;
         margin-left: 2em;
     }
@@ -84,10 +84,10 @@
         margin-left: 2em;
     }
 
-    @media (min-width: 1300px)  and (max-width: 1399px) {
+    @media (min-width: 1300px) {
         border-radius: 14em;
         width: 72%;
-        height: 62%;
+        height: 85%;
         margin-top: 3em;
         margin-left: 2em;
     }
