--- a/src/app/mobile-nav-modal/mobile-nav-modal.component.scss
+++ b/src/app/mobile-nav-modal/mobile-nav-modal.component.scss
@@ -13,7 +13,7 @@ button {
 
 #close > div {
     font-size: 2.5em;
-    right: 0.8em;
+    right: 0.4em;
     position: absolute;
     @media (min-width: 375px) and (max-width: 480px)
     {
