--- a/src/app/projects/project/project.component.scss
+++ b/src/app/projects/project/project.component.scss
@@ -25,7 +25,7 @@
     
     @media (min-width: 601px) and (max-width: 700px)
     {
-        aspect-ratio: 1/1.6;
+        aspect-ratio: 1/1.3;
     }
     
 
@@ -39,7 +39,7 @@
 img {
     margin-right: 1em;
     width: 100%;
-    aspect-ratio: 1/3;
+    aspect-ratio: 1/2;
     border-radius: 1em;
 
     @media (min-width: 350px) and (max-width: 400px)
