--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,7 @@ section, #nav-modal  {
     background-color: $base-back-color;
     color: $base-text-color;
     overflow-y: hidden;
-    padding-bottom: 2em;
+    padding-bottom: 10em;
     padding-top: 2em;
 }
 
